Bug 191543 - kioslave/file/file.cpp does not build on opensolaris
Summary: kioslave/file/file.cpp does not build on opensolaris
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-04 01:20 UTC by tropikhajma
Modified: 2009-06-15 22:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (886 bytes, patch)
2009-05-04 01:21 UTC, tropikhajma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tropikhajma 2009-05-04 01:20:15 UTC
Version:           4.2.71 (using Devel)
Compiler:          Sun Studio 12 
OS:                Solaris
Installed from:    Compiled sources

building on opensolaris fails with:
...
pkgbuild: cd /export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800/kioslave/file && /opt/SUNWspro/bin/CC  -library=no%Cstd  -DQT_NO_STL -DQT_NO_CAST_TO_ASCII -D_REENTRANT -DKDE_DEPRECATED_WARNINGS -Dkio_file_EXPORTS -D__EXTENSIONS__ -DSOLARIS -D_REENTRANT -D__EXTENSIONS__ -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_POSIX_PTHREAD_SEMANTICS -DSOLARIS -DSOLARIS10 -DNDEBUG -DNO_DEBUG -D_UNICODE -DUNICODE -D_RWSTD_REENTRANT  -D_XOPEN_SOURCE=500 -D_XPG5  -I/opt/foss/include/stdcxx/ansi -I/opt/foss/include/stdcxx -I/opt/foss/include -D_REENTRANT -D__EXTENSIONS__ -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_POSIX_PTHREAD_SEMANTICS -DSOLARIS -DSOLARIS10 -DNDEBUG -DNO_DEBUG -D_UNICODE -DUNICODE -D_RWSTD_REENTRANT  -D_XOPEN_SOURCE=500 -D_XPG5  -I/opt/foss/include/stdcxx/ansi -I/opt/foss/include/stdcxx -I/opt/foss/include -xtarget=pentium4 -m32 -xarch=sse2 -xchip=pentium4 -xcache=8/64/4:256/128/8 -library=no%Cstd -features=anachronisms,except,rtti,export,extensions,nestedaccess,tmplife,tmplrefstatic -instances=global -template=geninlinefuncs -s  -xlang=c99 -xalias_level=compatible -xustr=ascii_utf16_ushort -Qoption ccfe -features=gcc -Qoption ccfe -features=zla -Qoption ccfe ++boolflag:sunwcch=false -mt   -DQT_NO_DEBUG -KPIC -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800/kioslave/file -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kioslave/file -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800 -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800 -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/interfaces -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kio -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kio/bookmarks -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kio/kio -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kio/kfile -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/actions -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/colors -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/config -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/dialogs -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/findreplace -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/fonts -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/icons -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/itemviews -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/jobs -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/kernel -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/paged -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/plotting -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/shortcuts -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/sonnet -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/util -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/widgets -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/windowmanagement -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdeui/xmlgui -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kjs -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800/kjs -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800/kdecore -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/compression -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/config -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/date -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/io -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/jobs -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/kernel -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/network -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/services -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/localization -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/sycoca -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/text -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/util -I/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kdecore/sonnet -I/opt/foss/qt4/include/phonon -I/opt/foss/qt4/include/QtXmlPatterns -I/opt/foss/qt4/include/QtWebKit -I/opt/foss/qt4/include/QtHelp -I/opt/foss/qt4/include/QtAssistant -I/opt/foss/qt4/include/QtDBus -I/opt/foss/qt4/include/QtTest -I/opt/foss/qt4/include/QtUiTools -I/opt/foss/qt4/include/QtScript -I/opt/foss/qt4/include/QtSvg -I/opt/foss/qt4/include/QtXml -I/opt/foss/qt4/include/QtSql -I/opt/foss/qt4/include/QtOpenGL -I/opt/foss/qt4/include/QtNetwork -I/opt/foss/qt4/include/QtDesigner -I/opt/foss/qt4/include/Qt3Support -I/opt/foss/qt4/include/QtGui -I/opt/foss/qt4/include/QtCore -I/opt/foss/qt4/include/Qt -I/opt/foss/qt4/share/mkspecs/default -I/opt/foss/qt4/include -I/usr/X11/include    -D_LARGEFILE64_SOURCE -o CMakeFiles/kio_file.dir/file.o -c /export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kioslave/file/file.cpp
pkgbuild: "/opt/foss/qt4/include/QtCore/qstringmatcher.h", line 91: Warning: Types cannot be declared in anonymous union.
pkgbuild: "/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kioslave/file/file.cpp", line 1068: Error: QString::operator=(const char*) is not accessible from FileProtocol::unmount(const QString&).
pkgbuild: "/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kioslave/file/file.cpp", line 1091: Error: QString::operator=(const char*) is not accessible from FileProtocol::unmount(const QString&).
pkgbuild: "/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/kioslave/file/file.cpp", line 1119: Error: QString::QString(const QByteArray&) is not accessible from FileProtocol::unmount(const QString&).
pkgbuild: 3 Error(s) and 1 Warning(s) detected.
pkgbuild: gmake[3]: *** [kioslave/file/CMakeFiles/kio_file.dir/file.o] Error 3
pkgbuild: gmake[3]: Leaving directory `/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/build-kdelibs-4.2.71.svn961800'
Comment 1 tropikhajma 2009-05-04 01:21:19 UTC
Created attachment 33332 [details]
patch

i don't say the patch is perfect, but it fixes the problem
Comment 2 Anne-Marie Mahfouf 2009-05-04 10:33:26 UTC
Can you send the problem and the patch to
https://mail.kde.org/mailman/listinfo/kde-solaris
so KDE people on Solaris can see if it relevant?

Thanks in advance!
Comment 3 groot 2009-06-15 22:07:55 UTC
SVN commit 982412 by adridg:

Minor Solaris stuff in kio file:
- support NO_ASCII_CAST, construct err string explicitly
- drop the QFile::remove() which isn't needed

BUG: 191543
(based on the patch attached to that bug)


 M  +5 -4      file.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982412