Minor Solaris stuff in kio file: - support NO_ASCII_CAST, construct err string explicitly - drop the QFile::remove() which isn't needed

BUG: 191543
(based on the patch attached to that bug)

svn path=/trunk/KDE/kdelibs/; revision=982412